# langevin-agglomeration

./: .gitignore  LD_AGGLOMERATION_IMPLEMENTATION_SPEC.md  LD_DIPOLE_EFIELD_IMPLEMENTATION_SPEC.md  README.md  environment.yml  pyproject.toml
docs/: theory.md  usage.md
examples/: run_box_agglomeration.py  run_box_agglomeration_efield.py  run_dimer_monomer_to_trimer.py  run_iron_dimer_monomer_efield.py  run_pentamer_agglomeration.py  run_sequential_growth.py  run_settling.py  run_single_particle_settling_box.py
examples/configs/: box_agglomeration.yml  dipole_box_agglomeration.yml  dipole_sequential_growth.yml  dipole_sequential_growth_coupled.yml  sequential_growth.yml  settling_air_300K.yml
examples/materials/: demo_metal_100nm.yml
src/ldagg/: __init__.py  __main__.py  analysis.py  boundaries.py  cli.py  clusters.py  collisions.py  constants.py  diagnostics.py  electric.py  gas.py  integrators.py  particles.py  plotting.py  sequential_growth.py  settling.py  simulation.py
tests/: test_agglomeration_smoke.py  test_cluster_export.py  test_collisions.py  test_coupled_cluster_dipoles.py  test_diagnostics.py  test_eb_integrator.py  test_electric_dipoles.py  test_electric_validation_figures.ipynb  test_electric_validation_figures.py  test_gas_friction.py  test_settling.py  test_visualization.py
